[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adbc"
version = "1.0.0"
description = "A CLI utility to automatically discover and connect to Android devices via mDNS and Wireless ADB"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "mwdle" }]
requires-python = ">=3.10"
dependencies = ["zeroconf~=0.149.3"]

[project.urls]
Repository = "https://github.com/mwdle/adbc"

[project.scripts]
adbc = "adbc:find_and_connect"

[tool.setuptools]
py-modules = ["adbc"]
